--- a/src/app/components/lista-productos/modal-producto/modal-producto.component.html
+++ b/src/app/components/lista-productos/modal-producto/modal-producto.component.html
@@ -176,7 +176,7 @@
       </button>
         </div>
 
-        {{this.listaCaracteristicas | json}}
+        <!-- {{this.listaCaracteristicas | json}} -->
       </form>
 
       <div class="relative shadow-md sm:rounded-lg">
