--- a/src/app/components/lista-adquisiciones/modal-adquisicion/modal-adquisicion.component.html
+++ b/src/app/components/lista-adquisiciones/modal-adquisicion/modal-adquisicion.component.html
@@ -537,14 +537,12 @@
                 </button>
               </ng-template>
             </ngx-file-drop>
-            <a
-              *ngIf="adquisicionModel.facxml != ''"
+            <a *ngIf="adquisicionModel.facxml != ''"
               (click)="abrirDocumento(adquisicionModel.facxml)"
               href="javascript: void(0)"
               class="underline underline-offset-1 mt-2 flex justify-center text-sm text-blue-500"
               id="file_input_help"
-              >Descargar factura XML.</a
-            >
+              >Descargar factura XML.</a>
           </div>
           <div class="lg:w-1/3 md:w-1/3 w-full">
             <label
@@ -573,6 +571,11 @@
                 </button>
               </ng-template>
             </ngx-file-drop>
+            <a *ngIf="this.tokenPlantilla != ''"
+              href="javascript: void(0)"
+              class="underline underline-offset-1 mt-2 flex justify-center text-sm text-blue-500"
+              id="file_input_help"
+              >{{this.tokenPlantilla}}</a>
           </div>
         </div>
       </div>
