--- a/src/app/components/asignacion-equipo-usuario/asignacion-equipo-usuario.component.html
+++ b/src/app/components/asignacion-equipo-usuario/asignacion-equipo-usuario.component.html
@@ -367,7 +367,7 @@
                 </a>
                 <a
                 (click)="openModalContenedor(row)"
-                matTooltip="Contenedores"
+                matTooltip="Expediente fotográfico"
                 class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                 mat-icon-button
               >
