--- a/src/app/components/asignacion-equipo-usuario/modal-contenedor-imagenes-asignacion-equipo/modal-contenedor-imagenes-asignacion-equipo.component.html
+++ b/src/app/components/asignacion-equipo-usuario/modal-contenedor-imagenes-asignacion-equipo/modal-contenedor-imagenes-asignacion-equipo.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center" style="border: none !important" mat-dialog-title>
-  <h2 class="headline m-0 flex-auto">Contenedores de la asignación</h2>
+  <h2 class="headline m-0 flex-auto">Expediente fotográfico de la asignación</h2>
   <button></button>
   <!-- <mat-icon  svgIcon="mat:help" matTooltip="El grupo de opciones funciona como un alias o una etiqueta para una lista de opciones."></mat-icon> -->
   <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
@@ -23,15 +23,14 @@
       </div> -->
 
 
-
       <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="index == 0">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              <b>Contenedor</b>
+              <b>Expediente fotográfico</b>
             </mat-panel-title>
             <mat-panel-description>
-              Agregue un nuevo contenedor e imagenes
+              Agregue un nuevo Expediente fotográfico
               <mat-icon>keyboard_arrow_down</mat-icon>
             </mat-panel-description>
           </mat-expansion-panel-header>
