--- a/src/app/components/lista-inventario/modal-load-image/modal-load-image.component.scss
+++ b/src/app/components/lista-inventario/modal-load-image/modal-load-image.component.scss
@@ -10,3 +10,8 @@ top: 23px;
 padding-top: 15px;
 margin-bottom: 0;
 }
+
+.mat-button-toggle-checked {
+  background-color: #093F97;
+  color: white !important;
+}
