--- a/src/app/components/camara/camara.component.html
+++ b/src/app/components/camara/camara.component.html
@@ -4,8 +4,9 @@
 		 [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable" [videoOptions]="videoOptions" (cameraSwitched)="cameraWasSwitched($event)"
 		 (initError)="handleInitError($event)"></webcam>
 		<br/>
-		<div class="actionBtn" (click)="triggerSnapshot();" title="Take Picture">📸</div>
-		<div class="actionBtn" (click)="showNextWebcam(true);" title="Switch Camera">🔁</div>
+		<div class="actionBtn" (click)="triggerSnapshot();" title="Tomar fotografía">📸</div>
+    <!-- <br><br>
+		<div class="actionBtn" (click)="showNextWebcam(true);" title="Switch Camera">🔁</div> -->
 	</div>
 </div>
 
