eliminar inventario con servicios

--- a/src/app/components/lista-inventario/lista-inventario.component.html
+++ b/src/app/components/lista-inventario/lista-inventario.component.html
@@ -187,7 +187,7 @@
                     </svg>
                   </button>
                 </div>
-                <div class="mr-5">
+                <!-- <div class="mr-5">
                   <button
                     (click)="openModalAsignacion(item)"
                     matTooltip="Asignar inventario"
@@ -200,7 +200,7 @@
                     <path d="M6.16406 18.5C6.90074 16.5912 8.56373 16 12.0001 16C15.4661 16 17.128 16.5578 17.855 18.5" stroke="#323232" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                   </button>
-                </div>
+                </div> -->
 
                 <!-- <div *ngIf="productosAsignar==true" class="mr-5">
                   <button
