nedpoint de produccion y ultimos cambios

--- a/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
+++ b/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
@@ -1,4 +1,4 @@
-<div class="overflow-hidden">
+<div class="">
   <form role="form" autocomplete="off" [formGroup]="formPropietario"
   novalidate>
   <div class="flex items-center " style="border: none !important" mat-dialog-title>
