primeros cambios pruebas finales

--- a/src/app/components/lista-proveedor/lista-proveedor.component.html
+++ b/src/app/components/lista-proveedor/lista-proveedor.component.html
@@ -125,9 +125,11 @@
                     Proveedor
                   </span>
                 </div>
-                <div class="grid justify-items-start mb-1 mt-1">
-                  <div class="text-left">
-                    <span class="font-bold">Razon Social</span>: {{ item.razonsocial }}
+                <div class="flex justify-center">
+                  <div class="grid justify-items-start mb-1 mt-1">
+                    <div class="text-left">
+                      <span class="font-bold">Razon Social</span>: {{ item.razonsocial }}
+                    </div>
                   </div>
                 </div>
               </div>
